# pico-base-wifi-rtos

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c  potenciometroRead.c
python/: server.py
